Aktualisiere ZMQConnectionPool und weitere Änderungen